<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- Keyboard focus sink -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"
        tools:ignore="UselessLeaf" />

    <!-- Main Content -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/m3_background">

        <!-- ROM Grid with frosted glass card effect -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:paddingHorizontal="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="120dp"
            android:overScrollMode="never"
            app:fastScrollEnabled="true"
            app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
            app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
            app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
            app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <!-- Empty State -->
        <ImageView
            android:id="@+id/gallery_empty_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:alpha="0.3"
            android:src="@drawable/ic_n64_controller"
            tools:ignore="ContentDescription" />

        <!-- Frosted Glass AppBar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:background="@drawable/bg_frosted_glass_strong"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:contentInsetStart="0dp"
                app:contentInsetEnd="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:background="@drawable/bg_frosted_glass_light"
                    android:paddingHorizontal="16dp">

                    <ImageButton
                        android:id="@+id/menuItem_openDrawer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:nextFocusRight="@+id/menuItem_search"
                        android:nextFocusDown="@id/gridview"
                        style="?attr/actionButtonStyle"
                        android:background="@drawable/bg_frosted_glass_button"
                        android:src="@drawable/ic_drawer_open"
                        android:onClick="onOpenDrawerButtonClicked"
                        android:contentDescription="@string/actionOpenMenu" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/menuItem_search"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toEndOf="@id/menuItem_openDrawer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:nextFocusLeft="@id/menuItem_openDrawer"
                        android:nextFocusDown="@id/gridview"
                        app:queryHint="@string/actionSearchRoms"
                        app:iconifiedByDefault="false"
                        app:queryBackground="@drawable/bg_frosted_glass_light"
                        app:searchIcon="@null"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:background="@android:color/transparent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Modern FAB with glassmorphism -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/menuItem_refreshRoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:nextFocusUp="@id/gridview"
            android:nextFocusLeft="@id/gridview"
            app:backgroundTint="@drawable/bg_frosted_glass_fab"
            app:elevation="12dp"
            app:srcCompat="@drawable/ic_fab_refresh_roms"
            android:onClick="onFabRefreshRomsClick"
            android:contentDescription="@string/menuItem_refreshRoms" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Navigation Drawer with Frosted Glass -->
    <RelativeLayout
        android:id="@+id/drawerContainer"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:clipToOutline="true"
        android:outlineProvider="background"
        style="@style/MupenTheme_Dark_Sidebar">

        <paulscode.android.mupen64plusae.GameSidebar
            android:id="@+id/drawerNavigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:background="@android:color/transparent"
            android:nextFocusDown="@+id/drawerNavigation"
            android:nextFocusLeft="@+id/drawerNavigation"
            android:nextFocusRight="@+id/drawerNavigation"
            android:nextFocusUp="@+id/drawerNavigation" />

        <paulscode.android.mupen64plusae.GameSidebar
            android:id="@+id/gameSidebar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="gone"
            android:background="@android:color/transparent" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>